# chronicle

./: Cargo.toml  Makefile  README.md
benches/: record_flow.rs
docs/: specification.md
docs/design/: http_trigger_state_machine.md  kafka_trigger_state_machine.md  mongodb_trigger_state_machine.md  mqtt_trigger_state_machine.md  rabbitmq_trigger_state_machine.md  redis_trigger_state_machine.md
docs/guides/: examples.md  observability.md  operations.md  security.md
docs/reference/: chronicle.schema.json  config.yaml
e2e/: docker-compose.yaml  harness.sh
examples/: grpc_enrichment.yaml  http_to_grpc.yaml  http_to_kafka.yaml  kafka_to_email.yaml  spec_connectors.yaml
examples/schemas/: alert.desc  alert.proto  sensor_reading.avsc  summary.avsc  summary.desc
src/: app.rs  app_state.rs  backpressure.rs  chronicle.rs  config.rs  connectors.rs  domain.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  retry.rs  telemetry.rs  transport.rs
src/chronicle/: context.rs  dispatcher.rs  engine.rs  phase.rs  retry_runner.rs  trigger_common.rs
src/chronicle/phase/: executor.rs  http_client.rs  kafka_producer.rs  mariadb_insert.rs  model.rs  mqtt_publish.rs  postgres_insert.rs  transform.rs  utils.rs
src/codec/: avro.rs  cbor.rs  http.rs  mod.rs  payload.rs  protobuf.rs
src/config/integration/: app.rs  chronicles.rs  connectors.rs  management.rs  mod.rs
src/connectors/: database.rs  kafka.rs  management.rs
src/integration/: factory.rs  registry.rs
src/readiness/: controller.rs  dependency.rs  graph.rs  mod.rs  state.rs  warmup.rs
src/transport/: broker.rs  http_server.rs  kafka.rs  kafka_context.rs  kafka_util.rs  mongodb.rs  mqtt.rs  rabbitmq.rs  readiness_gate.rs  redis.rs  runtime.rs
tests/: backpressure_test.rs  config_validation.rs  config_validation_snapshots.rs  connector_lifecycle.rs  db_sink_contract.rs  documented_chronicles.rs  error_contract.rs  http_roundtrip.rs  kafka_roundtrip.rs  management_ready.rs  message_brokers.rs  postgres_phase.rs  readiness_properties.rs  redis_triggers.rs  retry_runner.rs  shutdown_lifecycle.rs  smoke.rs  telemetry.rs
tests/common/: mod.rs
tests/fixtures/: chronicle-integration.yaml  documented-chronicles.yaml  message_brokers.yaml
tests/snapshots/: config_validation_snapshots__http_connector_role_and_version.snap  config_validation_snapshots__phase_connector_type_mismatch.snap  config_validation_snapshots__unknown_trigger_connector.snap
tests/support/: config.rs  feature_flags.rs  mocks.rs  mod.rs  redis.rs
tests/unit/: chronicle_context_tests.rs  chronicle_dispatcher_tests.rs  chronicle_engine_tests.rs  chronicle_http_client_phase_tests.rs  chronicle_kafka_producer_phase_tests.rs  chronicle_mariadb_insert_phase_tests.rs  chronicle_mqtt_publish_phase_tests.rs  chronicle_phases_tests.rs  chronicle_postgres_insert_phase_tests.rs  chronicle_transform_phase_tests.rs  config_integration_tests.rs  integration_factory_tests.rs  integration_mocks_tests.rs  integration_registry_tests.rs  readiness_controller_tests.rs  readiness_graph_tests.rs  readiness_state_tests.rs  readiness_warmup_tests.rs  redis_trigger_runtime_tests.rs  transport_kafka_tests.rs  transport_mqtt_tests.rs  transport_rabbitmq_tests.rs
tools/: audit-deps.sh  ci_checks.sh  schema_validate.rs  size-build.sh  verify.sh
