[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "schema_validate"
path = "tools/schema_validate.rs"

[features]
default = ["http-in"]
full = [
    "http-in",
    "http-out",
    "kafka",
    "rabbitmq",
    "mqtt",
    "db-postgres",
    "db-mariadb",
    "db-mongodb",
    "db-redis",
    "grpc",
    "smtp",
]
http-in = []
http-out = []
kafka = ["dep:rdkafka"]
mqtt = ["dep:rumqttc"]
rabbitmq = ["dep:lapin", "dep:tokio-amqp", "dep:tokio-executor-trait"]
db-postgres = []
db-mariadb = []
db-mongodb = ["dep:mongodb"]
db-redis = ["dep:redis"]
grpc = ["dep:tonic"]
smtp = ["dep:lettre"]

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
apache-avro = "0.20.0"
async-trait = { version = "0.1.89", default-features = false }
axum = { version = "0.8.6", default-features = false, features = ["http1", "tokio", "macros", "json"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
config = "0.15.18"
metrics = "0.24.2"
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-runtime"], optional = true }
prost-reflect = { version = "0.16.2", features = ["serde"] }
prost-types = "0.14.1"
rdkafka = { version = "0.38.0", default-features = false, features = ["tokio"], optional = true }
redis = { version = "0.24.0", default-features = false, features = ["tokio-comp", "connection-manager", "tls-rustls", "tokio-rustls-comp", "streams"], optional = true }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "rustls-tls-manual-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
serde_cbor = "0.11.2"
jsonschema = { version = "0.17.1", features = ["draft202012"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql"] }
bytes = "1.6.1"
http = "0.2"
lettre = { version = "0.11.7", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport"], optional = true }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tokio-util = "0.7.17"
tonic = { version = "0.11", default-features = false, features = ["transport", "tls", "prost", "codegen"], optional = true }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tower = { version = "0.4", features = ["util", "make"] }
humantime = "2.1.0"
jaq-core = "2.2.1"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
jaq-interpret = { version = "1.5.0", features = ["serde_json"] }
jaq-parse = "1.0.3"
jaq-std = "2.1.2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
lapin = { version = "2.3", default-features = false, features = ["rustls"], optional = true }
tokio-amqp = { version = "2.0", optional = true }
tokio-executor-trait = { version = "3.1.0", optional = true }
rumqttc = { version = "0.25", optional = true }
url = "2.5.7"
rand = "0.8"

[dev-dependencies]
criterion = "0.7.0"
httpmock = "0.8.2"
metrics-util = "0.20.0"
tempfile = "3.23.0"
insta = { version = "1.39.0", default-features = false, features = ["redactions"] }
proptest = "1.5.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
